# avante.nvim

./: .busted  .editorconfig  .gitattributes  .gitignore  .luacheckrc  .luarc.json  .mcp.json  .pre-commit-config.yaml  AGENTS.md  Build-LuaTiktoken.ps1  Build.ps1  CODE_SIMULATIONS.json  CONFIG_FIX_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  Makefile  REACT_DEBUGGING.md  README.md  README_zh.md  SCENARIOS_TO_BUILD.json  SIMULATION_REPORT.md  TEST_RESULTS.json  WEBSITE.md  build.lua  build.sh  cursor-planning-mode.md  debug_parser.lua  docker-compose.test.yml  example_azure_next_gen_config.lua  flake.nix  luarc.json.template  open_questions.md  pyrightconfig.json  result  ruff.toml  run_minimal_tests.py  run_tests.sh  simple_test_runner.lua  stylua.toml  test_runner.py  (+1 more)
.avante_chat_history/: lua__avante__ai_bot.lua.json  lua__avante__config.lua.json  lua__avante__sidebar.lua.json
.cargo/: config.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: .luarc.json  build.yaml  ci.yaml  close-stale-issues-and-prs.yaml  deploy-website.yml  integration.yml  lua.yaml  luarocks.yml  manual.yml  pre-commit.yaml  python.yaml  release.yaml  rust.yaml  stylua.yaml  tests.yaml  vimdoc.yaml
.something/: CODE_SIMULATIONS.json  IMPLEMENTATION_REASONS.json  IMPLEMENTATION_REFERENCES.json  SCENARIOS_TO_BUILD.json  TEST_RESULTS.json  code_explanation_analysis.json  doc_report.md  prd.md  predecessor_tech_design.md  tech_design.md
.something/knowledge/: asdfsadfsadf.yaml  avante-nvim-history-storage-architecture-history-refactoring-ch.md  avante-plugin-test-implementation-complete-comprehensive-test-s-6yyyyyyy.md  integration-testing-best-practices.md  openrouter-built-in-provider-implementation-complete-provider-i-aaaaaaaa.md  openrouter-provider-implementation-provider-inheritance-pattern-yyyyyyyy.md  openrouter-technical-design-provider-configuration-patterns-bui-qqqqqqii.md  openrouter-url-pattern-detection-bug-in-openai-provider.md  provider-testing-patterns.md  react-prompts-double-invocation-fix-react-callback-loops-tool-u.md  the-language-of-code-comments.md  when-adding-code-comments.md
.something/new-knowledge/: react-double-invocation-fix.md  react-prompts-double-invocation-fix.md  react-prompts-fix.md
.something/relevant-knowledge/: pre-knowledge.md
after/plugin/: avante.lua
autoload/: avante.vim
contrib/: init.lua
crates/avante-html2md/: Cargo.toml
crates/avante-html2md/src/: lib.rs
crates/avante-html2md/tests/: html2md_tests.rs
crates/avante-parsers/: Cargo.toml
crates/avante-parsers/src/: lib.rs
crates/avante-providers/: Cargo.toml
crates/avante-repo-map/: Cargo.toml
crates/avante-repo-map/queries/: tree-sitter-c-defs.scm  tree-sitter-c-sharp-defs.scm  tree-sitter-cpp-defs.scm  tree-sitter-elixir-defs.scm  tree-sitter-go-defs.scm  tree-sitter-java-defs.scm  tree-sitter-javascript-defs.scm  tree-sitter-lua-defs.scm  tree-sitter-php-defs.scm  tree-sitter-python-defs.scm  tree-sitter-ruby-defs.scm  tree-sitter-rust-defs.scm  tree-sitter-scala-defs.scm  tree-sitter-swift-defs.scm  tree-sitter-typescript-defs.scm  tree-sitter-zig-defs.scm
crates/avante-repo-map/src/: lib.rs
crates/avante-repo-map/tests/: repo_map_tests.rs
crates/avante-templates/: Cargo.toml
crates/avante-templates/src/: lib.rs
crates/avante-templates/tests/: template_tests.rs
crates/avante-tokenizers/: Cargo.toml  README.md
crates/avante-tokenizers/src/: lib.rs
crates/avante-tokenizers/tests/: integration_tests.rs
crates/lua-tokenizers/: Cargo.toml
doc/: avante.nvim.txt  avante.txt
docs/: copilot_claude_prompt_caching.md  mcp_lazy_loading.md  message_separation.md
ftplugin/: AvanteInput.lua
homepage/: .eslintrc.json  .gitignore  DEPLOYMENT.md  README.md  i18n.ts  jest.config.js  jest.setup.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
homepage/__tests__/: Button.test.tsx  Navigation.test.tsx  api.test.ts  utils.test.ts
homepage/app/: globals.css
homepage/components/: Analytics.tsx  CodeBlock.tsx  ErrorBoundary.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  InstallationSection.tsx  LanguageSwitcher.tsx  Navigation.tsx
lua/: avante_lib.lua  tiktoken_lib.lua
plugin/: avante.lua
py/rag-service/: Dockerfile  README.md  build-docker.sh  gitconfig  pyproject.toml  requirements.txt  run.sh  shell.nix  shell_log.txt
py/rag-service/src/: main.py
py/rag-service/src/libs/: adaptive_retrieval.py  configs.py  context_compression.py  contextual_chunking.py  db.py  hybrid_retrieval.py  logger.py  utils.py
py/rag-service/src/models/: indexing_history.py  resource.py
py/rag-service/src/providers/: dashscope.py  factory.py  ollama.py  openai.py  openai_like.py  openrouter.py
py/rag-service/src/rag_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
py/rag-service/src/services/: indexing_history.py  resource.py
scripts/: lua-typecheck.sh  run-luatest.sh  setup-deps.sh
src/: __init__.py  system.py
syntax/: jinja.vim
tests/: basic_functionality_spec.lua  callback_deduplication_spec.lua  config_codex_env_spec.lua  config_spec.lua  configuration_spec.lua  deepseek_spec.lua  error_handling_spec.lua  history_migration_spec.lua  history_separated_spec.lua  integration_spec.lua  llm_acp_follow_locations_spec.lua  llm_acp_history_spec.lua  llm_react_callbacks_spec.lua  llm_react_spec.lua  llm_react_state_spec.lua  llm_spec.lua  llm_tools_spec.lua  load_mcp_tool_spec.lua  message_converter_spec.lua  model_message_spec.lua  nlua_helper.lua  performance_spec.lua  providers_spec.lua  rag_service_spec.lua  react_callbacks_spec.lua  react_integration_spec.lua  react_state_management_spec.lua  react_state_spec.lua  run_tests.lua  rust_integration_spec.lua  test_all_scenarios.lua  test_basic_operations.py  test_feedback_and_logging.py  test_integration.py  test_system_initialization.py  ui_message_spec.lua
website/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
(+383 files in other folders)
