[lib]
crate-type = ["cdylib"]

[package]
name = "avante-html2md"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
htmd = "0.1.6"
#html2md = "0.2.15"
html2md = { git = "https://gitlab.com/Kanedias/html2md.git", rev = "850ccf756a87fedebcea707c5c981c3103019238" }
mlua.workspace = true
reqwest = { version = "0.12.12", features = ["blocking", "native-tls-vendored"] }

[lints]
workspace = true

[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
