[lib]
crate-type = ["cdylib"]

[package]
name = "avante-parsers"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
hyper.workspace = true
tokio.workspace = true
mlua.workspace = true
scraper.workspace = true

[lints]
workspace = true

[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
