[lib]
crate-type = ["cdylib"]

[package]
name = "avante-templates"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
mlua.workspace = true
serde = { workspace = true, features = ["derive"] }
minijinja = { version = "2.4.0", features = [
  "loader",
  "json",
  "fuel",
  "unicode",
  "speedups",
  "custom_syntax",
  "loop_controls",
] }

[lints]
workspace = true

[features]
lua51 = ["mlua/lua51"]
lua52 = ["mlua/lua52"]
lua53 = ["mlua/lua53"]
lua54 = ["mlua/lua54"]
luajit = ["mlua/luajit"]
