[project]
name = "rag-service"
version = "0.1.0"
description = "RAG service for avante.nvim"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiohappyeyeballs",
  "aiohttp",
  "aiosignal",
  "annotated-types",
  "anyio",
  "asgiref",
  "asttokens",
  "attrs",
  "backoff",
  "bcrypt",
  "beautifulsoup4",
  "bleach",
  "build",
  "cachetools",
  "certifi",
  "charset-normalizer",
  # "chroma-hnswlib",
  "chromadb",
  "click",
  "coloredlogs",
  "dashscope",
  "dataclasses-json",
  "decorator",
  "defusedxml",
  "deprecated",
  "dirtyjson",
  "distro",
  "dnspython",
  "docx2txt",
  "durationpy",
  "email-validator",
  "et-xmlfile",
  "executing",
  "fastapi",
  "fastapi-cli",
  "fastjsonschema",
  "filelock",
  "filetype",
  "flatbuffers",
  "frozenlist",
  "fsspec",
  "google-auth",
  "googleapis-common-protos",
  "greenlet",
  "grpcio",
  "h11",
  "httpcore",
  "httptools",
  "httpx",
  "huggingface-hub",
  "humanfriendly",
  "idna",
  "importlib-metadata",
  "importlib-resources",
  "ipdb",
  "ipython",
  "jedi",
  "jinja2",
  "jiter",
  "joblib",
  "jsonschema",
  "jsonschema-specifications",
  "jupyter-client",
  "jupyter-core",
  "jupyterlab-pygments",
  "kubernetes",
  "llama-cloud",
  "llama-cloud-services",
  "llama-index",
  "llama-index-agent-openai",
  "llama-index-cli",
  "llama-index-core",
  "llama-index-embeddings-dashscope",
  "llama-index-embeddings-ollama",
  "llama-index-embeddings-openai",
  "llama-index-embeddings-openai-like>=0.2.0",
  "llama-index-indices-managed-llama-cloud",
  "llama-index-llms-dashscope",
  "llama-index-llms-ollama",
  "llama-index-llms-openai",
  "llama-index-llms-openai-like",
  "llama-index-llms-openrouter",
  "llama-index-multi-modal-llms-openai",
  "llama-index-program-openai",
  "llama-index-question-gen-openai",
  "llama-index-readers-file",
  "llama-index-readers-llama-parse",
  "llama-index-vector-stores-chroma",
  "llama-parse",
  "markdown-it-py",
  "markdownify",
  "markupsafe",
  "marshmallow",
  "matplotlib-inline",
  "mdurl",
  "mistune",
  "mmh3",
  "monotonic",
  "mpmath",
  "multidict",
  "mypy-extensions",
  "nbclient",
  "nbconvert",
  "nbformat",
  "nest-asyncio",
  "networkx",
  "nltk",
  "numpy",
  "oauthlib",
  "ollama",
  "onnxruntime",
  "openai",
  "openpyxl",
  "opentelemetry-api",
  "opentelemetry-exporter-otlp-proto-common",
  "opentelemetry-exporter-otlp-proto-grpc",
  "opentelemetry-instrumentation",
  "opentelemetry-instrumentation-asgi",
  "opentelemetry-instrumentation-fastapi",
  "opentelemetry-proto",
  "opentelemetry-sdk",
  "opentelemetry-semantic-conventions",
  "opentelemetry-util-http",
  "orjson",
  "overrides",
  "packaging",
  "pandas",
  "pandocfilters",
  "parso",
  "pathspec",
  "pexpect",
  "pillow",
  "platformdirs",
  "posthog",
  "prompt-toolkit",
  "propcache",
  "protobuf",
  "ptyprocess",
  "pure-eval",
  "pyasn1",
  "pyasn1-modules",
  "pydantic",
  "pydantic-core",
  "pygments",
  "pypdf",
  "pypika",
  "pyproject-hooks",
  "python-dateutil",
  "python-dotenv",
  "python-multipart",
  "pytz",
  "pyyaml",
  "pyzmq",
  "referencing",
  "regex",
  "requests",
  "requests-oauthlib",
  "rich",
  "rich-toolkit",
  "rpds-py",
  "rsa",
  "safetensors",
  "shellingham",
  "six",
  "sniffio",
  "soupsieve",
  "sqlalchemy",
  "stack-data",
  "starlette",
  "striprtf",
  "sympy",
  "tenacity",
  "tiktoken",
  "tinycss2",
  "tokenizers",
  "tornado",
  "tqdm",
  "traitlets",
  "transformers",
  "tree-sitter",
  "tree-sitter-c-sharp",
  "tree-sitter-embedded-template",
  "tree-sitter-language-pack",
  "tree-sitter-yaml",
  "typer",
  "typing-extensions",
  "typing-inspect",
  "tzdata",
  "urllib3",
  "uvicorn",
  "uvloop",
  "watchdog",
  "watchfiles",
  "wcwidth",
  "webencodings",
  "websocket-client",
  "websockets",
  "wrapt",
  "yarl",
  "zipp",
]

[project.scripts]
avante-rag-service = "main:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
